feat: refactor register to registry